--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
-        perl-version: ['5.24', '5.26', '5.28', '5.30']
+        perl-version: ['5.8', '5.24', '5.26', '5.28', '5.30']
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
